--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -302,7 +302,6 @@ margin-right: 5px;
 
 // MEDIA QUERIES TO COVER - DESKTOP / TABLET:
 
-// Below media query not working
 @media only screen and (min-width: 2560px) {
   .navbar { 
     margin-left: 2130px !important;
@@ -397,7 +396,6 @@ margin-right: 5px;
 
 }
 
-// MEDIA QUERY DONE
 @media only screen and (min-width: 1920px) and (max-width: 2559px) {
   .navbar { 
     margin-left: 1490px !important;
@@ -570,10 +568,8 @@ margin-right: 5px;
   #project-git-link {
     font-size: 25px;
 }
-
 }
 
-// MEDIA QUERY DONE
 @media only screen and (min-width: 1600px) and (max-width: 1679px){
   .navbar { 
     margin-left: 1170px !important;
@@ -652,11 +648,8 @@ margin-right: 5px;
   #project-git-link {
     font-size: 25px;
 }
-
 }
 
-
-// MEDIA QUERY DONE
 @media only screen and (min-width: 1535px) and (max-width: 1599px) {
   .navbar { 
     margin-left: 1105px !important;
@@ -746,7 +739,6 @@ margin-right: 5px;
 
 }
 
-// MEDIA QUERY DONE
 @media only screen and (min-width: 1440px) and (max-width: 1534px) {
   .navbar { 
     margin-left: 1005px !important;
@@ -908,7 +900,6 @@ margin-right: 5px;
 }
 }
 
-// MEDIA QUERY = DONE
 @media only screen and (min-width: 1280px) and (max-width: 1364px) {
   .navbar { 
     margin-left: 856px !important;
@@ -993,7 +984,6 @@ margin-right: 5px;
 }
 
 
-// LAST PRIORITY //
 @media screen and (min-width: 501px) and (max-width: 1279px) {
   .navbar { 
     margin-left: 875px !important;
@@ -1074,7 +1064,8 @@ margin-right: 5px;
 
 
 // MOBILE NAV MEDIA QUERIES:
-@media all and (min-width: 50px) and (max-width: 375px) {
+// 360 
+@media all and (min-width: 50px) and (max-width: 360px) {
   .navbar {
     display: flex !important;
     position: fixed !important;
@@ -1134,7 +1125,11 @@ margin-right: 5px;
   .nav-text {
     font-size: 25px !important;
     transform: none !important;
-    margin-top: 18px;
+    margin-top: 11px;
+  }
+
+ #dev-text {
+    margin-top: 15px;
   }
 
   .name-title-email {
@@ -1148,11 +1143,14 @@ margin-right: 5px;
 
   .web-design-dev {
     font-size: 15px;
+    padding-bottom: 0px;
+    margin: 0px;
   }
 
   .footer {
     position: absolute;
-    bottom: 45vh;
+    top: 325px;
+    height: 20px;
   }
 
   .title-email {
@@ -1214,15 +1212,261 @@ margin-right: 5px;
   flex-direction: row;
   width: 60vw;
   position: absolute;
-  bottom: 250px;
+  top: 50vh;
   font-size: 25px;
 }
 
 .skills {
   font-size: 10px;
-  width: 80vw;
+  width: 95vw;
   position: absolute;
-  bottom: 200px;
+  top: 58vh;
+}
+
+.i {
+  width: 50px;
+}
+
+// Projects
+.project-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 5px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  width: 60vw;
+  margin-top: 20px !important;
+}
+
+.back-button {
+  font-size: 45px;
+  margin-top: 4px;
+  margin-left: 50px;
+}
+
+#web-back {
+  margin-left: 5px;
+}
+
+.projects {
+  font-size: 50px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.project-title {
+  font-size: 35px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+#city-title {
+  margin-bottom: 4px;
+}
+
+.project-img {
+  width: 93vw;
+}
+
+.project-description {
+  width: 93vw;
+  font-size: 15px;
+  margin-bottom: 0px;
+}
+
+.tech-used {
+  font-size: 20px;
+  margin-bottom: 0px;
+  margin-top: 20px;
+}
+
+.tech-list {
+  font-size: 12px;
+  width: 93vw;
+}
+
+.project-links {
+  display: flex;
+  flex-direction: column;
+}
+
+#project-web-link {
+  font-size: 20px;
+}
+
+#project-git-link {
+  font-size: 20px;
+}
+
+#ad-back {
+  margin-left: -36px;
+}
+}
+
+
+// 375 MEDIA:
+@media all and (min-width: 361px) and (max-width: 375px),
+screen and (min-height: 50px) and (max-height: 745px)
+{
+  .navbar {
+    display: flex !important;
+    position: fixed !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    align-items: none !important;
+    height: 30vh !important;
+    margin-left: -8px !important;
+  }
+  
+  .nav-div {
+    display: flex !important;
+    flex-direction: column!important;
+    width: 100vw !important;
+    height: inherit !important;
+    position: fixed !important;
+    text-align: center !important;
+  }
+
+  .click {
+    color: #CAFFD0 !important;
+  }
+
+  .dark {
+    background-color: black !important;
+  }
+  
+  a:link {
+    text-decoration: none !important;
+    color: black !important;
+  }
+  
+  a:visited { 
+    text-decoration: none!important; 
+    color: black !important;
+   }
+  
+  .nav-buttons {
+    color :black !important;
+    border: none !important;
+    background-color: #CAFFD0;
+    margin-left: -10px !important;
+    height: 10vh;
+  }
+  
+  #about-nav-button {
+    border-left: none !important;
+    border-top: black 3px solid !important;
+    border-bottom: black 3px solid !important;
+  }
+  
+  #ad-nav-button {
+    border-top: black 3px solid !important;
+    border-bottom: black 3px solid !important;
+  }
+  
+  .nav-text {
+    font-size: 25px !important;
+    transform: none !important;
+    margin-top: 15px;
+  }
+
+ #dev-text {
+    margin-top: 17px;
+  }
+
+  .name-title-email {
+    margin-left: 5px;   
+  }
+
+  .nat {
+    font-size: 70px !important;
+    margin-top: 20px;
+  }
+
+  .web-design-dev {
+    font-size: 15px;
+    padding-bottom: 0px;
+    margin: 0px;
+  }
+
+  .footer {
+    position: absolute;
+    top: 325px;
+    height: 20px;
+  }
+
+  .title-email {
+    font-size: 40px !important;
+    margin-bottom: 10px;
+  }
+
+  .peace {
+    width: 10px;
+    height: 15px;
+    margin-top: 18px;
+    margin-left: 1px;
+  }
+
+  // About 
+.about-section {
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  margin-left: 5px;
+  margin-top: 0;
+}
+
+.about-me {
+  width: 60vw;
+  display: flex;
+  flex-direction: row;
+}
+
+#about-back {
+  width: 5px;
+  height: 5px;
+  margin-top: 14px;
+  margin-right: -70px;
+}
+
+#about-back-text {
+  margin-top: 14px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.about-me-info {
+  font-size: 25px;
+  line-height: 0.90;
+  margin-top: 35px;
+}
+
+.profile-pic {
+  width: 45vw;
+  position: absolute;
+  margin-left: 130px;
+  margin-top: 140px;
+  z-index: -2;
+}
+
+.about-email {
+  display: flex;
+  flex-direction: row;
+  width: 60vw;
+  position: absolute;
+  top: 50vh;
+  font-size: 25px;
+}
+
+.skills {
+  font-size: 10px;
+  width: 95vw;
+  position: absolute;
+  top: 58vh;
 }
 
 .i {
@@ -1370,30 +1614,37 @@ margin-right: 5px;
   .nav-text {
     font-size: 25px !important;
     transform: none !important;
-    margin-top: 17px;
+    margin-top: 19px;
+  }
+
+  #dev-text {
+    margin-top: 22px;
   }
 
   .name-title-email {
-    margin-left: 5px;   
+    margin-left: 5px;  
+    margin-bottom: 10px; 
   }
 
   .nat {
-    font-size: 70px !important;
+    font-size: 75px !important;
     margin-top: 20px;
   }
 
   .web-design-dev {
     font-size: 15px;
+    margin: 0;
+    padding-top: 200px !important;
   }
 
   .footer {
     position: absolute;
-    bottom: 45vh;
+    bottom: 40vh;
   }
 
   .title-email {
-    font-size: 40px !important;
-    margin-bottom: 10px;
+    font-size: 45px !important;
+    margin-bottom: 10px !important;
   }
 
   .peace {
